--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>CodePen - Talk timer</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="./style.css">
-  <script type="text/javascript" src="./index.js"></script>
+  <link rel="stylesheet" href="src/style.css">
+  <script type="text/javascript" src="src/index.js"></script>
 
 </head>
 <body>
